# nvim-spectre

./: .editorconfig  .gitignore  .luarc.json  LICENSE  Makefile  README.md  build.lua  build.sh  style.toml  stylua.toml
.github/: FUNDING.yml  generated-files-bot.yml  stale.yml
.github/workflows/: ci.yml  docs.yml  release.yml
autoload/: spectre.vim
doc/: spectre.txt  tags
lua/spectre/: _log.lua  actions.lua  config.lua  highlight.lua  highlights.lua  init.lua  state.lua  state_utils.lua  ui.lua  utils.lua
lua/spectre/data/: _lru.lua
lua/spectre/regex/: rust.lua  vim.lua
lua/spectre/replace/: base.lua  init.lua  oxi.lua  sd.lua  sed.lua
lua/spectre/search/: ag.lua  base.lua  init.lua  rg.lua
lua/spectre/ui/: buffer.lua  float.lua
lua/spectre/ui/buffer/: init.lua
lua/spectre/ui/float/: init.lua
lua/spectre/ui/legacy/: init.lua
lua/spectre/ui/nui_components/: init.lua
plugin/: spectre.lua
spectre_oxi/: Cargo.toml
spectre_oxi/.cargo/: config
spectre_oxi/src/: lib.rs
spectre_oxi/tests/: fixture.txt  latin.txt
tests/: bench.lua  cwd_spec.lua  escape_spec.lua  helper.lua  line_render_spec.lua  minimal.vim  ui_spec.lua  util_spec.lua
tests/project/: test1.txt
tests/project/rg_spec/: test2.txt
tests/project/sed_spec/: sed_group_check.txt  sed_ignore_case.txt  sed_multiple_quote.txt  sed_single_quote.txt  sed_slash.txt  sed_test.txt
tests/project_2/: test2.txt
tests/project_2/rg_spec/: test2.txt
tests/project_2/sed_spec/: sed_group_check.txt  sed_multiple_quote.txt
tests/replace/: sed_spec.lua
tests/search/: rg_spec.lua
(+1 files in other folders)
