[package]
name = "spectre_oxi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
crate-type = ["cdylib"]

[dependencies]
nvim-oxi = { version = "0.3.0", features=["neovim-0-9"] }
regex = "1.6.0"
lazy_static = "1.4.0"

